--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -14,7 +14,7 @@ const menuitems: any = [
   },
   {
     title: "Projects",
-    path: "#",
+    path: "/projects",
   },
   {
     title: "Contact",
