--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,36 +2,35 @@
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
-import { Image } from "@astrojs/image/components";
 
-const TeamImg1 = "https://source.unsplash.com/IF9TK5Uy-KI";
-const TeamImg2 = "https://source.unsplash.com/iEEBWgY_6lA";
-const TeamImg3 = "https://source.unsplash.com/ZHvM3XIOHoE";
+const Img1 = "https://source.unsplash.com/9BoqXzEeQqM";
+const Img2 = "https://source.unsplash.com/wdTpPg4ukd8";
+const Img3 = "https://source.unsplash.com/mZnx9429i94";
 
-const team = [
+const interests = [
   {
-    name: "Janette Lynch",
-    title: "Senior Director",
+    name: "Books",
+    title: "I like specially science fiction",
     avatar: {
-      src: TeamImg1,
+      src: Img1,
       width: 480,
       height: 560,
     },
   },
   {
-    name: "Marcell Ziemann",
-    title: "Principal Strategist",
+    name: "Sports",
+    title: "I practice sports like basketball and soccer",
     avatar: {
-      src: TeamImg2,
+      src: Img2,
       width: 580,
       height: 580,
     },
   },
   {
-    name: "Robert Palmer",
-    title: "Marketing Engineer",
+    name: "Software development",
+    title: "I use React and Nodejs",
     avatar: {
-      src: TeamImg3,
+      src: Img3,
       width: 580,
       height: 580,
     },
@@ -43,22 +42,19 @@ const team = [
   <Container>
     <Sectionhead>
       <Fragment slot="title">About</Fragment>
-      <Fragment slot="desc">We are a small passionate team.</Fragment>
+      <Fragment slot="desc"></Fragment>
     </Sectionhead>
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
-      <h2 class="font-bold text-3xl text-gray-800">
-        Empowering the world with Astro.
-      </h2>
+      <h2 class="font-bold text-3xl text-gray-800">I am described as ...</h2>
       <p class="text-lg leading-relaxed text-slate-500">
-        We're a multi-cultural team from around the world! We come from diverse
-        backgrounds, bringing different personalities, experiences and skills to
-        the job. This is what makes our team so special.
+        Technology enthusiast, insterested In Web and Video Game development.
+        Insatiable curiosity, always looking to understand the world.
       </p>
     </div>
     <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
       {
-        team.map((item) => (
+        interests.map((item) => (
           <div class="group">
             <div class="w-full aspect-square">
               <img
@@ -76,5 +72,6 @@ const team = [
         ))
       }
     </div>
+
   </Container>
 </Layout>
