--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -4,12 +4,11 @@ import Link from "./ui/link.astro";
 
 <div
   class="bg-black px-20 py-20 mt-20 mx-auto max-w-5xl rounded-lg flex flex-col items-center text-center">
-  <h2 class="text-white text-3xl md:text-6xl">Build faster websites.</h2>
+  <h2 class="text-white text-3xl md:text-6xl">Projects</h2>
   <p class="text-slate-500 mt-4 text-lg md:text-xl">
-    Pull content from anywhere and serve it fast with Astro's next-gen island
-    architecture.
+    Deep dive inside what I've made.
   </p>
   <div class="flex mt-5">
-    <Link href="#" style="inverted">Get Started</Link>
+    <Link href="/projects" style="inverted">Take me there</Link>
   </div>
 </div>
