--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -4,51 +4,48 @@ import { Icon } from "astro-icon";
 
 const features = [
   {
-    title: "Bring Your Own Framework",
+    title: "React JS",
     description:
-      "Build your site using React, Svelte, Vue, Preact, web components, or just plain ol' HTML + JavaScript.",
-    icon: "bx:bxs-briefcase",
+      "Build web apps capable of interact with APIS. Build scalable apps with Typescript and state management with React Context",
+    icon: "simple-icons:react",
   },
   {
-    title: "100% Static HTML, No JS",
+    title: "Unity",
     description:
-      "Astro renders your entire page to static HTML, removing all JavaScript from your final build by default.",
-    icon: "bx:bxs-window-alt",
+      "2d and 3d Videogame Development for PC and Android using C#. AR Experiences with Vuforia Engine.",
+    icon: "simple-icons:unity",
   },
   {
-    title: "On-Demand Components",
+    title: "Node JS",
     description:
-      "Need some JS? Astro can automatically hydrate interactive components when they become visible on the page.  ",
-    icon: "bx:bxs-data",
+      "Use Express js to manage the CRUD of a database and create a REST API. Autentification and session management with JSON web token.",
+    icon: "simple-icons:nodejs",
   },
   {
-    title: "Broad Integration",
+    title: "Blender",
     description:
-      "Astro supports TypeScript, Scoped CSS, CSS Modules, Sass, Tailwind, Markdown, MDX, and any other npm packages.",
-    icon: "bx:bxs-bot",
+      "Basic Modeling, Texturing and Animation with Blender.",
+    icon: "simple-icons:blender",
   },
   {
-    title: "SEO Enabled",
+    title: "Corel Draw",
     description:
-      "Automatic sitemaps, RSS feeds, pagination and collections take the pain out of SEO and syndication. It just works!",
-    icon: "bx:bxs-file-find",
+      "Hability to create vector graphics with the Corel Draw Suite.",
+    icon: "file-icons:coreldraw-alt",
   },
   {
-    title: "Community",
+    title: "Photoshop",
     description:
-      "Astro is an open source project powered by hundreds of contributors making thousands of individual contributions.",
-    icon: "bx:bxs-user",
+      "Basic knowledge of bitmap graphics manipulation using the Adobe Suite.",
+    icon: "simple-icons:adobephotoshop",
   },
 ];
 ---
 
 <div class="mt-16 md:mt-0">
-  <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-    Everything you need to start a website
-  </h2>
+  <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">Skills</h2>
   <p class="text-lg mt-4 text-slate-600">
-    Astro comes batteries included. It takes the best parts of state-of-the-art
-    tools and adds its own innovations.
+    I am into web and game development also I have some design skills
   </p>
 </div>
 
