--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -16,25 +16,27 @@ import Link from "@components/ui/link.astro";
       Braulio Guadalupe Camarena Huerta
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Technology enthusiast, interested In Web and Video Game development.
-      Insatiable curiosity, always looking to understand the world.
+      I am always glad to share my knowledge make something valuable out of it.
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="#"
-        href="https://web3templates.com/"
+        href="https://github.com/BrauCamaH"
         target="_blank"
         rel="noopener">
-        Get Started
+        Github
       </Link>
-      <Link
-        size="lg"
-        style="outline"
-        rel="noopener"
-        href="https://github.com/surjithctly/astroship"
-        target="_blank">
-        View Repo
-      </Link>
+
+      <a>
+        <Link
+          size="lg"
+          style="outline"
+          rel="noopener"
+          href="https://medium.com/@braulio-camarenah"
+          target="_blank">
+          Medium
+        </Link>
+      </a>
     </div>
   </div>
 </main>
