--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,13 +7,7 @@ import "@fontsource/inter/variable.css";
 export interface Props {
   title: string;
 }
-// const { src } = await getImage({
-//   src: "../../assets/hero.png",
-//   width: 800,
-//   height: 742,
-//   format: "avif",
-// });
-// console.log(src);
+
 const resolvedImageWithDomain = new URL("/opengraph.jpg", Astro.url).toString();
 const { title } = Astro.props;
 ---
@@ -23,22 +17,16 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="generator" content={Astro.generator} />
 
-    <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <SEO
-      title={`${title}${title && " | "}Astroship`}
+      title={`${title}${title && " | "}BGCH`}
       description="Astroship is a starter website template for Astro built with TailwindCSS."
-      twitter={{
-        creator: "@surjithctly",
-        site: "@web3templates",
-        card: "summary_large_image",
-      }}
       openGraph={{
         basic: {
           type: "website",
-          title: `Astroship - Starter Template for Astro`,
+          title: `Braulio - Starter Template for Astro`,
           image: resolvedImageWithDomain,
         },
         image: {
