--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,10 +1,8 @@
 ---
-import { Image } from "@astrojs/image/components";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Layout from "@layouts/Layout.astro";
 import { getFormattedDate } from "@utils/all";
-import { log } from "astro/dist/core/logger/core";
 
 // Use Astro.glob() to fetch all posts, and then sort them by date.
 const posts = (await Astro.glob("./blog/*.{md,mdx}")).sort(
@@ -15,7 +13,7 @@ const posts = (await Astro.glob("./blog/*.{md,mdx}")).sort(
 console.log(posts[0].frontmatter.image);
 ---
 
-<Layout title="Blog">
+<Layout title="Projects">
   <Container>
     <Sectionhead>
       <Fragment slot="title">Blog</Fragment>
