--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,15 +22,15 @@ const { title } = Astro.props;
 
     <SEO
       title={`${title}${title && " | "}BGCH`}
-      description="Astroship is a starter website template for Astro built with TailwindCSS."
+      description="This is the personal porfolio and blog of Braulio Camarena"
       openGraph={{
         basic: {
           type: "website",
-          title: `Braulio - Starter Template for Astro`,
+          title: `Braulio Camarena- Portfolio`,
           image: resolvedImageWithDomain,
         },
         image: {
-          alt: "Astroship Homepage Screenshot",
+          alt: "Braulio Camaren Portfolio",
         },
       }}
     />
