--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -16,7 +16,7 @@ import Link from "@components/ui/link.astro";
       Braulio Guadalupe Camarena Huerta
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      I am always glad to share my knowledge make something valuable out of it.
+      I am always glad to share my knowledge and make something valuable out of it.
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
