--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from 'astro:assets';
 import Link from "@components/ui/link.astro";
 ---
 
