--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions'
 import { SEO } from "astro-seo";
 import Footer from "@components/footer.astro";
 import Navbar from "@components/navbar/navbar.astro";
@@ -20,6 +21,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="generator" content={Astro.generator} />
 
+    <ViewTransitions/>
     <SEO
       title={`${title}${title && " | "}BGCH`}
       description="This is the personal porfolio and blog of Braulio Camarena"
