--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -30,7 +30,7 @@ const interests = [
   },
   {
     name: "Software development",
-    title: "I use React and Nodejs",
+    title: "I use React, Nodejs, and Unity 3d",
     url: "programming",
     avatar: {
       src: Img3,
@@ -75,6 +75,5 @@ const interests = [
         ))
       }
     </div>
-
   </Container>
 </Layout>
