fix typo at blog

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -21,7 +21,7 @@ const interests = [
   {
     name: "Sports",
     url: "sports",
-    title: "I practice sports like basketball and soccer",
+    title: "I practice sports like basketball, soccer and a weird one called ulama",
     avatar: {
       src: Img2,
       width: 580,
