--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,7 @@ const { title } = Astro.props;
   </head>
   <body>
     <Navbar />
-    <main transition:animate="slide">
+    <main>
       <article>
         <slot />
       </article>
