fix typos at blog

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -30,7 +30,7 @@ const features = [
   {
     title: "Corel Draw",
     description:
-      "Hability to create vector graphics with the Corel Draw Suite.",
+      "Ability to create vector graphics with the Corel Draw Suite.",
     icon: "file-icons:coreldraw-alt",
   },
   {
