--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -7,7 +7,7 @@ const features = [
     title: "React JS",
     description:
       "Build web apps capable of interact with APIS. Build scalable apps with Typescript and state management with React Context",
-    icon: "simple-icons:react",
+    icon: "logos:react",
   },
   {
     title: "Unity",
@@ -25,7 +25,7 @@ const features = [
     title: "Blender",
     description:
       "Basic Modeling, Texturing and Animation with Blender.",
-    icon: "simple-icons:blender",
+    icon: "logos:blender",
   },
   {
     title: "Corel Draw",
@@ -34,10 +34,10 @@ const features = [
     icon: "file-icons:coreldraw-alt",
   },
   {
-    title: "Photoshop",
+    title: "Flutter",
     description:
-      "Basic knowledge of bitmap graphics manipulation using the Adobe Suite.",
-    icon: "simple-icons:adobephotoshop",
+      "Create cross-platform apps with Flutter.",
+    icon: "logos:flutter",
   },
 ];
 ---
