--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -6,8 +6,9 @@ import { Icon } from "astro-icon";
 <div class="mt-24">
   <h2 class="text-center text-slate-500">Core of frameworks</h2>
   <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
-    <Icon class="h-8 md:h-12" name="simple-icons:react" />
-    <Icon class="h-8 md:h-12" name="simple-icons:nodejs" />
-    <Icon class="h-8 md:h-14" name="simple-icons:unity" />
+    <Icon class="h-8 md:h-12" name="logos:react" />
+    <Icon class="h-8 md:h-12" name="logos:nodejs" />
+    <Icon class="h-8 md:h-14" name="logos:unity" />
+    <Icon class="h-8 md:h-14" name="logos:flutter" />
   </div>
 </div>
